--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
   text-align: center;
 }
 
-h1 {
+.ms_txt-center {
   position: absolute;
   top: 50%;
   left: 50%;
@@ -14,6 +14,7 @@ h1 {
 
 #js-pswd {
   color: red;
+  font-size: 3em;
 }
 
 
